# FDTD

./: .gitignore  CMakeLists.txt  binary_to_movie.m  fdtd1d.f03  fdtd_3d.c  fdtd_3d.cpp  fdtd_tm.f03  init_pml.cpp  init_pml.h  makefile  movie_test.m  share.h  visualize3.m
